# spotify-jr

./: .gitignore  README.md
spotify-jr/: pyproject.toml
spotify-jr/spotify_jr/: config.py  main.py  schemas.py  utils.py
spotify-jr/spotify_jr/routers/: auth.py  player.py  search.py
