[tool.poetry]
name = "spotify-jr"
version = "0.1.0"
description = ""
authors = ["Matthew Palacio <mpalacio@catalyte.io>"]
readme = "README.md"
packages = [{include = "spotify_jr"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
