[tool.poetry]
name = "spotify-jr"
version = "0.1.0"
description = ""
authors = ["Matthew Palacio <mpalacio@catalyte.io>"]
readme = "README.md"
packages = [{include = "spotify_jr"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.93.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
python-dotenv = "^1.0.0"
requests = "^2.28.2"
authlib = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
